--- a/style.css
+++ b/style.css
@@ -2,14 +2,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Genos:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&display=swap');
-
+@import url('/assets/css/utils.css');
 
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     scroll-behavior: smooth;
 }
-
+button, input[type="submit"] {
+    cursor: pointer;
+}
 * {
     box-sizing: border-box;
 }
@@ -25,6 +27,8 @@ p {
 
 .section-box {
     padding: 40px 50px;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+    background: #fff;
 }
 
 h1,
@@ -211,12 +215,11 @@ img {
     width: 30px;
 }
 
-.section-about {
-    padding-top: 40px;
+.section-about,
+.contact {
     position: relative;
     max-width: 930px;
     margin: 0 auto;
-
 }
 
 .section-about .section-profile {
@@ -461,6 +464,10 @@ img {
     justify-content: flex-end;
 }
 
+.fd-c {
+    display: flex;
+    flex-direction: column;
+}
 
 
 .container {
@@ -507,18 +514,7 @@ img {
     }
 }
 
-.btn-lg {
-    font-size: 15px;
-    padding: 15px 20px;
-    min-width: 130px;
-}
 
-.btn-border {
-    color: #3d4451 !important;
-    border: 1px solid #cbcdcf;
-    background: transparent;
-    box-shadow: none;
-}
 
 .section-title {
     color: #3d4451;
@@ -542,17 +538,19 @@ img {
 }
 
 @media (min-width: 512px) {
-    #instafeed-container a{
+    #instafeed-container a {
         grid-column: span 6;
     }
 }
+
 @media (min-width: 768px) {
-    #instafeed-container a{
+    #instafeed-container a {
         grid-column: span 4;
     }
 }
+
 @media (min-width: 992px) {
-    #instafeed-container a{
+    #instafeed-container a {
         grid-column: span 3;
     }
 }
@@ -591,4 +589,103 @@ img {
     margin: 0 auto;
     background-color: #fff;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+}
+
+.form-group {
+    width: 100%;
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.form-group .line {
+    position: relative;
+    display: block;
+    width: 100%;
+}
+
+.form-group .line::before {
+    left: 50%;
+}
+
+.form-group .line::after {
+    right: 50%;
+    background-color: #e8676b;
+}
+
+.line::before,
+.line:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    bottom: 0;
+    position: absolute;
+    -webkit-transition: 0.15s ease all;
+    -moz-transition: 0.15s ease all;
+    transition: 0.15s ease all;
+}
+
+.form-group-fname,
+.form-group-lname {
+    width: 49%;
+}
+
+.form-group .label {
+    display: block;
+    font-weight: 700;
+    font-size: 16px;
+    float: none;
+    line-height: 1.3;
+    margin: 0 0 4px 0;
+    padding: 0;
+}
+
+.form-group .sub-level {
+    display: block;
+    font-size: 13px;
+    float: none;
+    font-weight: 400;
+    line-height: 1.3;
+    margin: 4px 0 0;
+    padding: 0;
+}
+
+.form-group input {
+    border-radius: 2px;
+    color: #333;
+    padding: 6px 10px;
+    display: block;
+    float: none;
+    font-size: 16px;
+    padding: 6px 10px;
+    height: 38px;
+    width: 100%;
+    line-height: 1.3;
+    border: none;
+    border-bottom: 2px solid #d8d8d8;
+    outline: none;
+    -webkit-transition: box-shadow linear 0.2s;
+    transition: 0.2s ease;
+}
+
+.form-group input:focus {
+    border-bottom: none;
+    box-shadow: 0px 2px 0px #0a84d4;
+}
+
+.text-area {
+    font-size: 16px;
+    font-weight: 500;
+    width: 100%;
+    max-width: 100%;
+    min-width: 250px;
+    min-height: 200px;
+    resize: none;
+    border: 1px solid #d8d8d8;
+    transition: 0.2s ease;
+}
+
+.text-area:focus{
+    border: none;
+    outline: none;
+    box-shadow:   0px 0px 0px 2px #0a84d4;;
 }
