--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Genos:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&display=swap');
 @import url('/assets/css/utils.css');
+@import url('/assets/css/animate.css');
 
 html {
     line-height: 1.15;
@@ -214,6 +215,7 @@ img {
     margin-left: 30px;
     width: 30px;
 }
+
 
 .section-about,
 .contact {
@@ -528,6 +530,7 @@ img {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-gap: 4px;
+    animation: slideInFromBottom 0.3s ease-in;
 }
 
 #instafeed-container a {
@@ -686,4 +689,43 @@ img {
     border: none;
     outline: none;
     box-shadow:   0px 0px 0px 2px #0a84d4;;
+}
+
+
+
+/* Animations */
+@keyframes slideInFromLeft{
+    0% {
+        transform:translateX(-50px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromRight{
+    0% {
+        transform:translateX(50px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromTop{
+    0% {
+        transform:translateY(-50px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideInFromBottom{
+    0% {
+        transform:translateY(50px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
