--- a/style.css
+++ b/style.css
@@ -10,17 +10,22 @@ html {
     -webkit-text-size-adjust: 100%;
     scroll-behavior: smooth;
 }
-button, input[type="submit"] {
+
+button,
+input[type="submit"] {
     cursor: pointer;
 }
+
 * {
     box-sizing: border-box;
 }
+
 @media (max-width: 768px) {
     .hide-on-mobile {
-        display: none!important;
+        display: none !important;
     }
 }
+
 p {
     margin: 0 0 25px 0;
 }
@@ -34,6 +39,26 @@ p {
     padding: 40px 50px;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
     background: #fff;
+}
+
+@media(max-width:992px) {
+    .section-box {
+        padding: 50px 40px
+    }
+}
+
+@media(max-width:767px) {
+    .section {
+        padding-top: 50px
+    }
+
+    .section-box {
+        padding: 30px 20px
+    }
+
+    .section-title {
+        font-size: 30px
+    }
 }
 
 h1,
@@ -689,47 +714,68 @@ img {
     transition: 0.2s ease;
 }
 
-.text-area:focus{
+.text-area:focus {
     border: none;
     outline: none;
-    box-shadow:   0px 0px 0px 2px #0a84d4;;
+    box-shadow: 0px 0px 0px 2px #0a84d4;
+    ;
 }
 
 
 
 /* Animations */
-@keyframes slideInFromLeft{
+@keyframes slideInFromLeft {
     0% {
-        transform:translateX(-50px);
+        transform: translateX(-50px);
     }
+
     100% {
         transform: translateX(0);
     }
 }
 
-@keyframes slideInFromRight{
+@keyframes slideInFromRight {
     0% {
-        transform:translateX(50px);
+        transform: translateX(50px);
     }
+
     100% {
         transform: translateX(0);
     }
 }
 
-@keyframes slideInFromTop{
+@keyframes slideInFromTop {
     0% {
-        transform:translateY(-50px);
+        transform: translateY(-50px);
     }
+
     100% {
         transform: translateY(0);
     }
 }
 
-@keyframes slideInFromBottom{
+@keyframes slideInFromBottom {
     0% {
-        transform:translateY(50px);
+        transform: translateY(50px);
     }
+
     100% {
         transform: translateY(0);
     }
+}
+
+.contact-info .contact-list{
+    list-style: none;
+    padding: 0;
+}
+.contact-info .contact-list strong {
+    font-size: 13px;
+    font-weight: 400;
+    text-transform: uppercase;
+    width: 85px;
+    float: left;
+}
+
+.contact-info .contact-list li {
+    margin-bottom: 18px;
 }
